apps/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    cert-manager.io/cluster-issuer: "lab-k8s-ca-issuer"
  name: keycloak-route
spec:
  ingressClassName: kong
  rules:
  - host: keycloak.li.k8s
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - keycloak.li.k8s
    secretName: keycloak-cert
